Changes made to fix padding and margin errors that caused the websiteto overflow on the right. Added change for issues with quiz returning to (null) after completeing food waste quiz.

--- a/Capstone_Project/src/Style/foot.css
+++ b/Capstone_Project/src/Style/foot.css
@@ -3,8 +3,6 @@ footer {
     padding: 20px 0;
 }
 .foot-container {
-    padding-left: 15px;
-    padding-right: 20px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
