--- a/Capstone_Project/src/Style/homebody.css
+++ b/Capstone_Project/src/Style/homebody.css
@@ -1,7 +1,7 @@
-.body {
+body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    margin: 14px;
+    margin: 0;
     padding: 0;
     box-sizing: border-box; 
 }
@@ -31,6 +31,10 @@
     background-color: rgba(255, 255, 255, 0.5);
     z-index: -1;
     pointer-events: none;
+}
+.body-text{
+    padding: 14px;
+    margin: 0;
 }
 
 .text-overlay {
