--- a/Capstone_Project/src/Style/resource.css
+++ b/Capstone_Project/src/Style/resource.css
@@ -1,22 +1,22 @@
 /* .bold-text {
-    font-weight: bold;
-  }
+  font-weight: bold;
+}
 
 p {
-    display: inline;
-    margin: 16px;
-  }
+  display: inline;
+  margin: 16px;
+}
 
 h3 {
-    font-size: 24px;;
+  font-size: 24px;
 }
 
 h2 {
-    font-size: 26px;;
+  font-size: 26px;
 }
 
 h1 {
-    font-size: 28px;;
+  font-size: 28px;
 }
 
 .text-bubble {
